UserGuide: Add tags for sections written by me

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -105,6 +105,8 @@ Returns any person having at least a `[professor]` tag
 * `filter professor tutor` +
 Returns any person having at least a `[professor]` or `[tutor]` tags, or both
 
+// tag::find[]
+
 ==== Locating persons by name: `find`
 
 Finds persons whose names contain any of the given keywords. +
@@ -118,7 +120,7 @@ Format: `find KEYWORD [MORE_KEYWORDS]`
 * Persons matching at least one keyword will be returned (i.e. `OR` search). e.g. `Hans Bo` will return
  `Hans Gruber`, `Bo Yang`
 * When no persons are found, the command will return a decently accurate suggestion of
-  who you might have been referring to.
+  who you might have been referring to, with the results of that suggestion shown as well.
 ****
 
 Examples:
@@ -127,8 +129,12 @@ Examples:
 Returns `john` and `John Doe`
 * `find Betsy Tim John` +
 Returns any person having names `Betsy`, `Tim`, or `John`
-* `find Bets` +
-Returns `0 persons listed! Did you mean Betsy?`
+* `find alx` +
+Returns `No results for alx. Showing results for Alex instead`
+
+image::FindCommandBeforeAndAfter.png[width="790"]
+
+// end::find[]
 
 // tag::showfavourite[]
 ==== Listing all favourite contacts : `showFavourite"
@@ -241,6 +247,9 @@ Adds the birthday "21 Oct" to the 3rd person in the address book.
 
 image::birthday-command-ui.png[width="790"]
 
+
+// tag::addremove[]
+
 ==== Adding a tag to select persons : `addtag`
 
 Adds the given tag to the specified persons . +
@@ -282,6 +291,8 @@ Removes the tag "friends" from 1st, 2nd and 3rd person in the address book.
 * `find Betsy` +
 `removetag 2 5 t/classmate` +
 Removes the tag "classmate" from the 2nd and 5th person in the results of the `find` command.
+
+// end::addremove[]
 
 ==== Deleting a person : `delete`
 
@@ -462,6 +473,8 @@ UniCity prompts the user, `This person's email is already in use. Would you like
 User will reply with `yes` in the command box to continue the operation. +
 Otherwise, he may choose to reply with `no`.
 
+// tag::windowsize[]
+
 ==== Changing the window size : `ws`
 
 Changes the window size according to predefined sizes that the user can choose from.
@@ -469,7 +482,7 @@ Format: `ws WINDOWSIZE`
 
 ****
 * Changes the window size to the specified `WINDOWSIZE`.
-* The index *must be from the predefined choices* small, medium and big.
+* The window size *must be from the predefined choices* small, medium and big.
 ****
 
 Examples:
@@ -478,6 +491,10 @@ Examples:
 Changes the window size to small.
 * `ws med` +
 Changes the window size to medium.
+* `ws big` +
+Changes the window size to big.
+
+// end::windowsize[]
 
 ==== Exiting the program : `exit`
 
@@ -506,8 +523,6 @@ There is no need to save manually.
 === Choosing personalized wallpaper for the background of UniCity
 
 === Auto-completion of commands through analysing commands history
-
-=== Suggestions when typing a name in find command
 
 === Group contacts by their courses of study
 
