--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -4,7 +4,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :imagesDir: images
 :stylesDir: stylesheets
 
-UniCity was developed by the https://github.com/CS2103AUG2017-W13-B1 team. +
+UniCity was developed by the https://github.com/CS2103AUG2017-W13-B1[W13-B1] team. +
 
 We are a team based in the http://www.comp.nus.edu.sg[School of Computing, National University of Singapore].
 
@@ -12,7 +12,7 @@ We are a team based in the http://www.comp.nus.edu.sg[School of Computing, Natio
 
 === Vivek
 image::viveklakshmanan.png[width="150", align="left"]
-{empty}[https://github.com/vivekscl[github]]
+{empty}[https://github.com/vivekscl[github]] [<<vivekscl#, portfolio>>]
 
 Role: Scheduling and Tasking +
 Responsibilities: Ensures that team is on track with completing the current week's milestones. Also in charge
